// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon render success 1`] = `
<svg
  className="xui-icon"
>
  <use
    xlinkHref="#undefined"
  />
</svg>
`;

exports[`Icon 可以传递name 1`] = `
<svg
  className="xui-icon"
>
  <use
    xlinkHref="#wechat"
  />
</svg>
`;
